Updated Swedish translation.

--- a/man/po4a/dpkg-query.1/po/sv.po
+++ b/man/po4a/dpkg-query.1/po/sv.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-05-11 23:08-0500\n"
-"PO-Revision-Date: 2006-05-14 16:18+0100\n"
+"PO-Revision-Date: 2006-06-11 00:49+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -15,15 +15,15 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-query.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-query"
-msgstr "B<dpkg-query>"
+msgstr "dpkg-query"
 
 # type: TH
 #: dpkg-query.1:1
 #, no-wrap
 msgid "2006-04-09"
-msgstr ""
+msgstr "2006-05-09"
 
 # type: TH
 #: dpkg-query.1:1
@@ -56,51 +56,43 @@ msgstr "SYNOPS"
 
 # type: TP
 #: dpkg-query.1:9
-#, fuzzy
 msgid "B<dpkg-query> B<-l>|B<--list> I<package-name-pattern> ..."
-msgstr "B<-l> | B<--list> I<paketnamnsmönster> ..."
+msgstr "B<dpkg-query> B<-l>|B<--list> I<paketnamnsmönster> ..."
 
 # type: TP
 #: dpkg-query.1:13
-#, fuzzy
 msgid "B<dpkg-query> B<-W>|B<--show> I<package-name-pattern> ..."
-msgstr "B<-W> | B<--show> I<paketnamnsmönster> ..."
+msgstr "B<dpkg-query> B<-W>|B<--show> I<paketnamnsmönster> ..."
 
 # type: TP
 #: dpkg-query.1:17
-#, fuzzy
 msgid "B<dpkg-query> B<-s>|B<--status> I<package-name> ..."
-msgstr "B<-s> | B<--status> I<paketnamn> ..."
+msgstr "B<dpkg-query> B<-s>|B<--status> I<paketnamn> ..."
 
 # type: TP
 #: dpkg-query.1:21
-#, fuzzy
 msgid "B<dpkg-query> B<-L>|B<--listfiles> I<package-name> ..."
-msgstr "B<-L> | B<--listfiles> I<paket> ..."
+msgstr "B<dpkg-query> B<-L>|B<--listfiles> I<paketnamn> ...
 
 # type: TP
 #: dpkg-query.1:25
-#, fuzzy
-msgid "B<dpkg-query> B<-S>|B<--search> I<filename-search-pattern> ..."
-msgstr "B<-S> | B<--search> I<filnamnssökmönster> ..."
+msgid "B<dpkg-query> B<-S>|B<--search> I<filename-search-pattern> ...
+msgstr "B<dpkg-query> B<-S>|B<--search> I<filnamnssökmönster> ..."
 
 # type: TP
 #: dpkg-query.1:29
-#, fuzzy
 msgid "B<dpkg-query> B<-p>|B<--print-avail> I<package-name> ..."
-msgstr "B<-s> | B<--status> I<paketnamn> ..."
+msgstr "B<dpkg-query> B<-p>|B<--print-avail> I<paketnamn> ..."
 
 # type: TP
 #: dpkg-query.1:32
-#, fuzzy
 msgid "B<dpkg-query> B<--licence>|B<--license>"
-msgstr "B<--licence> | B<--license>"
+msgstr "B<dpkg-query> B<--licence>|B<--license>"
 
 # type: Plain text
 #: dpkg-query.1:35
-#, fuzzy
 msgid "B<dpkg-query> B<--version>"
-msgstr "B<dpkg-query>"
+msgstr "B<dpkg-query> B<--version>"
 
 # type: SH
 #: dpkg-query.1:36
@@ -131,7 +123,6 @@ msgstr "B<-l> | B<--list> I<paketnamnsmönster> ..."
 
 # type: Plain text
 #: dpkg-query.1:50
-#, fuzzy
 msgid ""
 "List packages matching given pattern. If no I<package-name-pattern> is "
 "given, list all packages in I</var/lib/dpkg/status>, excluding the ones "
@@ -140,18 +131,18 @@ msgid ""
 "pattern> to prevent the shell from performing filename expansion. For "
 "example this will list all package names starting with ``libc6'':"
 msgstr ""
-"Lista paket som matchar det givna mönstret.  Om inget I<paketnamnsmönster> "
-"anges listas alla paket i I</var/lib/dpkg/status>.  Skalets normala "
-"jokertecken tillåts i I<paketnamnsmönster>.  Observera att du sannolikt "
+"Lista paket som matchar det givna mönstret. Om inget I<paketnamnsmönster> "
+"anges listas alla paket i I</var/lib/dpkg/status>. Skalets normala "
+"jokertecken tillåts i I<paketnamnsmönster>. Observera att du sannolikt "
 "måste skriva I<paketnamnsmönster> inom citationstecken för att förhindra att "
-"skalet expanderar filnamnet.  Till exempel kommer följande lista alla paket "
-"vars namn börjar på \"libc5\":"
+"skalet expanderar filnamnet. Till exempel kommer följande lista alla paket "
+"vars namn börjar på \"libc6\":"
 
 # type: Plain text
 #: dpkg-query.1:54
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "  B<dpkg-query -l \\(aqlibc6*\\(aq>\n"
-msgstr "  B<dpkg-query -l 'libc5*'>\n"
+msgstr "  B<dpkg-query -l \\(aqlibc6*\\(aq>\n"
 
 # type: Plain text
 #: dpkg-query.1:60
@@ -161,6 +152,10 @@ msgid ""
 "and is not easily machine-readable. See B<-W> (B<--show>)  and B<--"
 "showformat> for a way to configure the output format."
 msgstr ""
+"Utdataformatet för detta alternativ kan inte justeras, men varieras "
+"automatiskt för att passa terminalbredden. Det är avsett för mänskliga "
+"läsare, och är inte enkelt maskinläsbart. Se B<-W> (B<--show>) och "
+"B<--showformat> för hur du konfigurerar utdataformatet."
 
 # type: TP
 #: dpkg-query.1:60
@@ -170,7 +165,6 @@ msgstr "B<-W> | B<--show> I<paketnamnsmönster> ..."
 
 # type: Plain text
 #: dpkg-query.1:67
-#, fuzzy
 msgid ""
 "Just like the B<--list> option this will list all packages matching the "
 "given pattern. However the output can be customized using the B<--"
@@ -179,8 +173,10 @@ msgid ""
 "separated by a tab."
 msgstr ""
 "Precis som flaggan B<--list> kommer detta att visa alla paket som matchar "
-"det givna mönstret.  Utdatat kan dock skräddarsys med flaggan B<--"
-"showformat>."
+"det givna mönstret. Utdatat kan dock skräddarsys med flaggan B<--"
+"showformat>. Standardutdataformatet är en rad per paket som träffas, där "
+"varje rad innehåller namn och installerad version av paketet, avdelat "
+"med ett tabulatortecken."
 
 # type: TP
 #: dpkg-query.1:67
@@ -199,19 +195,18 @@ msgstr ""
 
 # type: TP
 #: dpkg-query.1:71
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-L> | B<--listfiles> I<package-name> ..."
-msgstr "B<-L> | B<--listfiles> I<paket> ..."
+msgstr "B<-L> | B<--listfiles> I<paketnamn> ..."
 
 # type: Plain text
 #: dpkg-query.1:76
-#, fuzzy
 msgid ""
 "List files installed to your system from B<package-name>.  However, note "
 "that files created by package-specific installation-scripts are not listed."
 msgstr ""
-"Listar filer som installerats på ditt system från B<paket>.  Observera dock "
-"att filer som skapats av paketspecifika installationsskript inte listas."
+"Listar filer som installerats på ditt system från B<paketnamn>. Observera "
+"dock att filer som skapats av paketspecifika installationsskript inte listas."
 
 # type: TP
 #: dpkg-query.1:76
@@ -221,30 +216,28 @@ msgstr "B<-S> | B<--search> I<filnamnssökmönster> ..."
 
 # type: Plain text
 #: dpkg-query.1:82
-#, fuzzy
 msgid ""
 "Search for a filename from installed packages. All standard shell wildchars "
 "can be used in the pattern. This command will not list extra files created "
 "by maintainer scripts, nor will it list alternatives."
 msgstr ""
-"Sök efter filnamnet bland de installerade paketen.  Alla skalets vanliga "
-"jokertecken kan användas i mönstret.  Kommandot kommer inte att visa "
+"Sök efter filnamnet bland de installerade paketen. Alla skalets vanliga "
+"jokertecken kan användas i mönstret. Kommandot kommer inte att visa "
 "extrafiler som skapas av paketskript, ej heller kommer det att visa "
 "alternativ."
 
 # type: TP
 #: dpkg-query.1:82
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-p> |B<--print-avail> I<package-name>"
-msgstr "B<-p> |B<--print-avail> paket"
+msgstr "B<-p> |B<--print-avail> I<paketnamn>"
 
 # type: Plain text
 #: dpkg-query.1:86
-#, fuzzy
 msgid ""
 "Display details about I<package-name>, as found in I</var/lib/dpkg/"
 "available>."
-msgstr "Visar detaljer om I<paket> från I</var/lib/dpkg/available>."
+msgstr "Visar detaljer om I<paketnamn> från I</var/lib/dpkg/available>."
 
 # type: TP
 #: dpkg-query.1:86
@@ -282,15 +275,14 @@ msgstr "B<--admindir=>I<kat>"
 
 # type: Plain text
 #: dpkg-query.1:98
-#, fuzzy
 msgid ""
 "Change the location of the B<dpkg> database. The default location is I</var/"
 "lib/dpkg>."
-msgstr "Ändra platsen för B<dpkg>-databasen.  Förval är I</var/lib/dpkg>."
+msgstr "Ändra platsen för B<dpkg>-databasen. Förval är I</var/lib/dpkg>."
 
 # type: TP
 #: dpkg-query.1:98
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-f> | B<--showformat=>I<format>"
 msgstr "B<-f> | B<--showformat=>I<format>"
 
@@ -300,11 +292,14 @@ msgid ""
 "This option is used to specify the format of the output B<--show> will "
 "produce. The format is a string that will be output for each package listed."
 msgstr ""
+"Denna flagga används för att ange formatet på det utdata B<--show> "
+"skapar. Formatet är en sträng som kommer att matas ut för varje paket "
+"som listas."
 
 # type: Plain text
 #: dpkg-query.1:105
 msgid "In the format string, \\(lqB<\\e>\\(rq introduces escapes:"
-msgstr ""
+msgstr "I formatsträgnen inleds följande styrsekvenser med \\(lqB<\\e>\\(rq:"
 
 # type: Plain text
 #: dpkg-query.1:111
@@ -314,6 +309,9 @@ msgid ""
 "    B<\\er>  carriage return\n"
 "    B<\\et>  tab\n"
 msgstr ""
+"    B<\\en>  radmatning\n"
+"    B<\\er>  vagnreteur\n"
+"    B<\\et>  tabulator\n"
 
 # type: Plain text
 #: dpkg-query.1:116
@@ -322,6 +320,9 @@ msgid ""
 "of the following character, which is useful for \\(lqB<\\e>\\(rq and \\(lqB<"
 "$>\\(rq."
 msgstr ""
+"\\(lqB<\\e>\\(rq före ett annat tecken undertrycken en speciell betydelse "
+"för det efterföljande tecknet, vilket är kan användas för "
+"\\(lqB<\\e>\\(rq och \\(lqB<$>\\(rq."
 
 # type: Plain text
 #: dpkg-query.1:122
@@ -331,6 +332,10 @@ msgid ""
 "Fields are printed right-aligned unless the width is negative in which case "
 "left alignment will be used. The following I<field>s are recognised:"
 msgstr ""
+"Paketinformation kan läggas in genom att sätta in variabelreferenser till "
+"paketfält, på syntaxen \\(lqB<${>I<field>[B<;>I<width>]B<}>\\(rq. Fält "
+"skrivs högerjusterade såvida inte bredden är negativ i vilket fall "
+"vänsterjustering kommer att användas. Följande I<fält> stöds:"
 
 # type: Plain text
 #: dpkg-query.1:153
@@ -365,6 +370,34 @@ msgid ""
 "    B<Suggests>\n"
 "    B<Version>\n"
 msgstr ""
+"    B<Architecture>\n"
+"    B<Bugs>\n"
+"    B<Conffiles>\n"
+"    B<Config-Version>\n"
+"    B<Conflicts>\n"
+"    B<Depends>\n"
+"    B<Description>\n"
+"    B<Enhances>\n"
+"    B<Essential>\n"
+"    B<Filename>\n"
+"    B<Installed-Size>\n"
+"    B<MD5sum>\n"
+"    B<MSDOS-Filename>\n"
+"    B<Maintainer>\n"
+"    B<Origin>\n"
+"    B<Package>\n"
+"    B<Pre-Depends>\n"
+"    B<Priority>\n"
+"    B<Provides>\n"
+"    B<Recommends>\n"
+"    B<Replaces>\n"
+"    B<Revision>\n"
+"    B<Section>\n"
+"    B<Size>\n"
+"    B<Source>\n"
+"    B<Status>\n"
+"    B<Suggests>\n"
+"    B<Version>\n"
 
 # type: Plain text
 #: dpkg-query.1:158
@@ -372,12 +405,14 @@ msgid ""
 "The default format string is \\(lqB<${Package}\\et${Version}\\en>\\(rq.  To "
 "get the name of the dpkg maintainer and the installed version, you could run:"
 msgstr ""
+"Standardformatet är \\(lqB<${Package}\\et${Version}\\en>\\(rq. För att hämta "
+"namnet på paketansvarig och installerad version för dpkg och kan du köra:"
 
 # type: Plain text
 #: dpkg-query.1:162
 #, no-wrap
 msgid "  B<dpkg-query -W -f='${Package} ${Version}\\et${Maintainer}\\en' dpkg>\n"
-msgstr ""
+msgstr "  B<dpkg-query -W -f='${Package} ${Version}\\et${Maintainer}\\en' dpkg>\n"
 
 # type: SH
 #: dpkg-query.1:164
@@ -424,7 +459,6 @@ msgstr "E<lt>wakkerma@debian.orgE<gt>"
 
 # type: Plain text
 #: dpkg-query.1:178
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
@@ -440,34 +474,5 @@ msgstr "SE ÄVEN"
 
 # type: Plain text
 #: dpkg-query.1:181
-#, fuzzy
 msgid "B<dpkg>(1)."
-msgstr "B<dpkg>(8)"
-
-# type: TH
-#~ msgid "DPKG-QUERY"
-#~ msgstr "DPKG-QUERY"
-
-# type: TH
-#~ msgid "August 2001"
-#~ msgstr "Augusti 2001"
-
-# type: Plain text
-#, fuzzy
-#~ msgid ""
-#~ "This option is used to specify the format of the output B<--show> will "
-#~ "produce.  The format is a string that will be output for each package "
-#~ "listed. It can include the standard escape sequences \\en (newline), \\er "
-#~ "(carriage return) or \\e\\e (plain backslash). Package information can be "
-#~ "included by inserting variable references to package fields using the "
-#~ "${var[;width]} syntax. Fields are printed be right-aligned unless the "
-#~ "width is negative in which case left alignment will be used."
-#~ msgstr ""
-#~ "Denna flagga används för att ange formatet på det utdata B<--show> "
-#~ "skapar.  Formatet är en sträng som kommer att ange utdata för varje paket "
-#~ "som listas.  Formatsträngen kan innehålla de vanliga teckensekvenserna "
-#~ "\\en (nyrad), \\er (vagnretur) eller \\e\\e (rent omvänt snedstreck).  "
-#~ "Paketinformation kan inkluderas genom att lägga in variabelreferenser "
-#~ "till paketfält genom att använda syntaxen ${var[;bredd]}.  Fälten som "
-#~ "skrivs ut kommer att högerjusteras såvida inte bredden är negativ, i "
-#~ "vilket fall vänsterjustering kommer att användas."
+msgstr "B<dpkg>(1)."
