--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-11  Peter Karlsson <peterk@debian.org>
+
+	* dselect.1/po/sv.po: Updated translation.
+	* dpkg-query.1/po/sv.po: Updated translation.
+
 2006-06-09  Peter Karlsson <peterk@debian.org>
 
 	* dselect.1/po/sv.po: Updated translation.
