Fixed accidental syntax error.

--- a/man/po4a/dpkg-query.1/po/sv.po
+++ b/man/po4a/dpkg-query.1/po/sv.po
@@ -72,11 +72,11 @@ msgstr "B<dpkg-query> B<-s>|B<--status> I<paketnamn> ..."
 # type: TP
 #: dpkg-query.1:21
 msgid "B<dpkg-query> B<-L>|B<--listfiles> I<package-name> ..."
-msgstr "B<dpkg-query> B<-L>|B<--listfiles> I<paketnamn> ...
+msgstr "B<dpkg-query> B<-L>|B<--listfiles> I<paketnamn> ..."
 
 # type: TP
 #: dpkg-query.1:25
-msgid "B<dpkg-query> B<-S>|B<--search> I<filename-search-pattern> ...
+msgid "B<dpkg-query> B<-S>|B<--search> I<filename-search-pattern> ..."
 msgstr "B<dpkg-query> B<-S>|B<--search> I<filnamnssökmönster> ..."
 
 # type: TP
