Completed update of Swedish translation of manual pages.

--- a/man/po4a/dselect.cfg.5/po/sv.po
+++ b/man/po4a/dselect.cfg.5/po/sv.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2006-05-14 16:18+0100\n"
+"PO-Revision-Date: 2006-06-11 20:54+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,13 +17,13 @@ msgstr ""
 #: dselect.cfg.5:1
 #, no-wrap
 msgid "dselect.cfg"
-msgstr ""
+msgstr "dselect.cfg"
 
 # type: TH
 #: dselect.cfg.5:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: dselect.cfg.5:1
@@ -56,16 +56,15 @@ msgstr "BESKRIVNING"
 
 # type: Plain text
 #: dselect.cfg.5:11
-#, fuzzy
 msgid ""
 "This file contains default options for dselect. Each line contains a single "
 "option which is exactly the same as a normal commandline option for dselect "
 "except for the leading dashes which are not used here. Comments are allowed "
 "by starting a line with a hash sign (\"B<#>\")."
 msgstr ""
-"Denna fil innehåller förvalda inställningar för dselect.  Varje rad består "
+"Denna fil innehåller förvalda inställningar för dselect. Varje rad består "
 "av en ensam flagga som är exakt densamma som en normal kommandoradsflagga "
-"för dselect, förutom de inledande bindestrecken vilka inte används här.  "
+"för dselect, förutom de inledande bindestrecken vilka inte används här. "
 "Kommentarer är tillåtna genom att inleda en rad med nummertecken (\"B<#>\")."
 
 # type: SH
@@ -76,15 +75,13 @@ msgstr "FILER"
 
 # type: Plain text
 #: dselect.cfg.5:14
-#, fuzzy
 msgid "I</etc/dpkg/dselect.cfg>"
-msgstr "I</etc/dpkg/dselect.cfg> ~/.dselect.cfg"
+msgstr "I</etc/dpkg/dselect.cfg>"
 
 # type: Plain text
 #: dselect.cfg.5:16
-#, fuzzy
 msgid "I<~/.dselect.cfg>"
-msgstr "B<dselect>(8)"
+msgstr "I<~/.dselect.cfg>"
 
 # type: SH
 #: dselect.cfg.5:17
@@ -94,7 +91,6 @@ msgstr "FÖRFATTARE"
 
 # type: Plain text
 #: dselect.cfg.5:20
-#, fuzzy
 msgid ""
 "See I</usr/share/doc/dpkg/THANKS> for the list of people who have "
 "contributed to B<dselect>."
@@ -110,14 +106,5 @@ msgstr "SE ÄVEN"
 
 # type: Plain text
 #: dselect.cfg.5:22
-#, fuzzy
 msgid "B<dselect>(1)."
-msgstr "B<dselect>(8)"
-
-# type: TH
-#~ msgid "DSELECT.CFG"
-#~ msgstr "DSELECT.CFG"
-
-# type: TH
-#~ msgid "February 2002"
-#~ msgstr "Februari 2002"
+msgstr "B<dselect>(1)."
