--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
     introduced in that version. Thanks to Sergio Gelato. Closes: #370536
   * Add '.bzrtags' directory to default dpkg-source -i regex.
     Suggested by Adeodato Simó. Closes: #370392
+  * Print update-alternatives '--config' listing layout evenly spaced.
+    Closes: #325895
 
   [ Updated dpkg Translations ]
   * Romanian (Eddy Petrişor).
