Clarify the legend in update-alternatives '--help' (Andrew Ferrier). Closes: #305318

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-06-16  Andrew Ferrier  <andrew@new-destiny.co.uk>
+	    Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl (usage): Clarify the legend for the
+	help text.
+
 2006-06-16  Guillem Jover  <guillem@debian.org>
 
 	* scripts/update-alternatives.pl (config_message): Print '--config'
