--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
     Suggested by Adeodato Simó. Closes: #370392
   * Print update-alternatives '--config' listing layout evenly spaced.
     Closes: #325895
+  * Clarify the legend in update-alternatives '--help' (Andrew Ferrier).
+    Closes: #305318
 
   [ Updated dpkg Translations ]
   * Romanian (Eddy Petrişor).
