Simplified Chinese (Kov Tchai). Closes: #366260

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   * French (Christian Perrier).
   * Swedish (Peter Karlsson).
 
+  [ Updated dselect Translations ]
+  * Simplified Chinese (Kov Tchai). Closes: #366260
+
  -- Jacobo Tarrio <jtarrio@debian.org>  Tue,  6 Jun 2006 21:26:46 +0200
 
 dpkg (1.13.21) unstable; urgency=low
