--- a/dselect/po/zh_CN.po
+++ b/dselect/po/zh_CN.po
@@ -1,7 +1,9 @@
 # Simplified Chinese translation to dpkg.
 # Copyright (C) 2004 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# Kov Tchai <tchaikov@sjtu.edu.cn>, 2005.
+#
+# Copyrights:
+# Kov Chai <tchaikov@sjtu.edu.cn>, 2005,2006.
 # Hiweed Leng <hiweed@163.com>, 2004.
 # Carlos Z.F. Liu <carlosliu@users.sourceforge.net>, 2004.
 #
@@ -10,12 +12,12 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-02-17 08:58+0200\n"
-"Last-Translator: Tchaikov <tchaikov@sjtu.edu.cn>\n"
+"PO-Revision-Date: 2006-05-06 20:11+0800\n"
+"Last-Translator: Kov Chai <tchaikov@sjtu.edu.cn>\n"
 "Language-Team: Debian Chinese [GB] <debian-chinese-gb@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: dselect/basecmds.cc:121
 msgid "Search for ? "
@@ -569,7 +571,7 @@ msgstr ""
 "               “*”，  即已安装；\n"
 "               “-”，  即没有安装，但是残留有其配置文件；\n"
 "     处于这些状态    { “U”，即已解压缩但还未进行配置；\n"
-"          的软件包  { “C”，即不完全配置(其间有错误发生)；\n"
+"         的软件包    { “C”，即不完全配置(其间有错误发生)；\n"
 "     都是有故障的    { “I”，即部分安装(其间有错误发生)。\n"
 "原有标记：列表显示出来之前软件包就被要求设置的成状态；\n"
 "当前标记：现在软件包被要求设置的成状态：\n"
@@ -816,18 +818,20 @@ msgid "menu"
 msgstr "菜单"
 
 #: dselect/main.cc:150
-#, fuzzy, c-format
+#, c-format
 msgid "Debian `%s' package handling frontend version %s.\n"
-msgstr "Debian “%s” 软件包操作前端"
+msgstr "Debian “%s” 软件包操作前端 %s 版。\n"
 
 #: dselect/main.cc:153
 msgid ""
 "Copyright (C) 1994-1996 Ian Jackson.\n"
 "Copyright (C) 2000,2001 Wichert Akkerman.\n"
 msgstr ""
+"版权所有 (C) 1994-1996 Ian Jackson。\n"
+"版权所有 (C) 2000,2001 Wichert Akkerman。\n"
 
 #: dselect/main.cc:157
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
@@ -835,7 +839,7 @@ msgid ""
 msgstr ""
 "这是自由软件；要获知复制该软件的前提和条件，请参阅 GNU 公共许可证的\n"
 "第二版或其更新的版本。该软件【不】提供任何担保。\n"
-"请通过执行 dpkg-deb --licence 来查看版权和许可证的细节。\n"
+"请通过执行 %s --licence 来查看版权和许可证的细节。\n"
 
 #: dselect/main.cc:171
 #, c-format
@@ -843,6 +847,8 @@ msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
 msgstr ""
+"用法：%s [<选项> ...] [<操作> ...]\n"
+"\n"
 
 #: dselect/main.cc:175
 #, c-format
@@ -855,6 +861,13 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
+"选项：\n"
+"  --admindir <目录>          使用 <目录> 而非 %s。\n"
+"  --expert                   开启专家模式。\n"
+"  --debug <文件> | -D<文件>  打开调试信息，并把输出送到 <文件>。\n"
+"  --colour | --color 显示区块:[前景],[背景][:属性[+属性+..]]\n"
+"                             设置显示所用的配色。\n"
+"\n"
 
 #: dselect/main.cc:184
 #, c-format
@@ -864,6 +877,10 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
+"  --help                     显示本帮助信息。\n"
+"  --version                  显示版本信息。\n"
+"  --license | --license      显示许可证。\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -872,6 +889,9 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"操作：\n"
+"  手段 更新 选择 安装 设置 卸载 退出\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
@@ -923,13 +943,13 @@ msgid "Terminal does not appear to support highlighting.\n"
 msgstr "终端不支持高亮显示。\n"
 
 #: dselect/main.cc:321
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Set your TERM variable correctly, use a better terminal,\n"
 "or make do with the per-package management tool %s.\n"
 msgstr ""
 "请正确设置您的 TERM 变量，用一个更合适的终端类型，\n"
-"或者转用针对单个软件包的包管理工具，即 "
+"或者转用针对单个软件包的包管理工具，即 %s。\n"
 
 #: dselect/main.cc:324
 msgid "terminal lacks necessary features, giving up"
@@ -1683,3 +1703,4 @@ msgstr "安装版本"
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "可用版本"
+
