--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-16  Kov Tchai  <tchaikov@sjtu.edu.cn>
+
+	* zh_CN.po: Updated to 289t.
+
 2006-05-16  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 289t; use only Romanian quotes.
