Basque (Piarres Beobide). Closes: #373107

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   * Galician (Jacobo Tarrio).
   * French (Christian Perrier).
   * Swedish (Peter Karlsson).
+  * Basque (Piarres Beobide). Closes: #373107
 
   [ Updated dselect Translations ]
   * Simplified Chinese (Kov Tchai). Closes: #366260
