--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-16  Piarres Beobide  <pi@beobide.net>
+
+	* eu.po: Updated to 937t1u.
+
 2006-06-09  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 939t.
