sv.po: Add a missing '%s' in a string. ro.po: Add a missing 's' in a format string.

--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13.11.0.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-02 03:58+0300\n"
-"PO-Revision-Date: 2006-06-09 20:15+0100\n"
+"PO-Revision-Date: 2006-06-16 10:21+0300\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -4382,7 +4382,7 @@ msgstr "%s: kunde inte avinstallera %s; jag behåller den som %s: %s"
 #: scripts/cleanup-info.pl:181
 #, perl-format
 msgid "%s: failed to unlock %s: %s"
-msgstr "%s: kunde inte låsa upp: %s"
+msgstr "%s: kunde inte låsa upp %s: %s"
 
 #: scripts/dpkg-divert.pl:12 scripts/update-alternatives.pl:33
 #, perl-format
