--- a/po/ro.po
+++ b/po/ro.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-02 03:58+0300\n"
-"PO-Revision-Date: 2006-06-05 02:12+0300\n"
+"PO-Revision-Date: 2006-06-16 10:21+0300\n"
 "Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -5002,7 +5002,7 @@ msgid ""
 msgstr ""
 "\n"
 "Nu există nici intrarea „START-INFO-DIR-ENTRY”, nici „This file documents”.\n"
-"%: imposibil a determina descrierea pentru intrarea „dir” - se renunţă\n"
+"%s: imposibil a determina descrierea pentru intrarea „dir” - se renunţă\n"
 
 #: scripts/install-info.pl:280
 #, perl-format
