--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-16  Paras Pradhan  <pradhanparas@gmail.com>
+
+	* ne.po: New file 737t80f121u.
+
 2006-06-16  Guillem Jover  <guillem@debian.org>
 
 	* sv.po: Add a missing '%s' in a string.
