--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
     Closes: #325895
   * Clarify the legend in update-alternatives '--help' (Andrew Ferrier).
     Closes: #305318
+  * Add the source version inside parenthesis to the Source field in the
+    generated .changes and binary packages if the binary package version
+    differs (like in binNMUs). Closes: #62529
 
   [ Updated dpkg Translations ]
   * Romanian (Eddy Petrişor).
