--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   * Add the source version inside parenthesis to the Source field in the
     generated .changes and binary packages if the binary package version
     differs (like in binNMUs). Closes: #62529
+  * Add missing comment serving as documentation about abort-remove on
+    removal in dpkg.postinst (Justin Pryzby). Closes: #372145
 
   [ Updated dpkg Translations ]
   * Romanian (Eddy Petrişor).
