Update the Polish translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,12 +21,16 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   * French (Christian Perrier).
   * Swedish (Peter Karlsson).
   * Basque (Piarres Beobide). Closes: #373107
+  * Polish (Robert Luberda).
 
   [ New dpkg Translations ]
   * Nepali (Paras Pradhan). Closes: #373728
 
   [ Updated dselect Translations ]
   * Simplified Chinese (Kov Tchai). Closes: #366260
+
+  [ Updated man pages translations ]
+  * Polish (Robert Luberda).
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Tue,  6 Jun 2006 21:26:46 +0200
 
