--- a/man/po4a/dpkg-deb.1/po/pl.po
+++ b/man/po4a/dpkg-deb.1/po/pl.po
@@ -2,16 +2,15 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.13.16\n"
+msgstr "Project-Id-Version: dpkg 1.13.22\n"
 "POT-Creation-Date: 2006-05-11 23:08-0500\n"
-"PO-Revision-Date: 2006-03-02 00:07+0100\n"
+"PO-Revision-Date: 2006-06-16 19:42+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"MIME-Version: 1.0\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
 #: dpkg-deb.1:1
@@ -21,9 +20,9 @@ msgstr "dpkg-deb"
 
 # type: TH
 #: dpkg-deb.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-05-10"
-msgstr "2006-02-28"
+msgstr "2006-05-10"
 
 # type: TH
 #: dpkg-deb.1:1
@@ -271,14 +270,15 @@ msgstr "B<--show>, B<-W>"
 # type: Plain text
 #
 #: dpkg-deb.1:132
-#, fuzzy
 msgid ""
 "Provides information about a binary package archive in the format specified "
 "by the B<--showformat> argument. The default format displays the package's "
 "name and version on one line, seperated by a tabulator."
 msgstr ""
 "Wy¶wietla informacjê o pakiecie binarnym w formacie okre¶lonym opcj± B<--"
-"showformat>."
+"showformat>. W domy¶lnym "
+"formacie w ka¿dej linii wy¶wietlana jest nazwa pakietu oraz - po znaku "
+"tabulacji - jego wersja."
 
 # type: TP
 #: dpkg-deb.1:132
@@ -484,19 +484,20 @@ msgstr "INNE OPCJE"
 # type: TP
 #: dpkg-deb.1:211
 #, no-wrap
-msgid "B<--show-format=>I<format>"
-msgstr ""
+msgid "B<--showformat=>I<format>"
+msgstr "B<--showformat=>I<format>"
 
 # type: Plain text
 #: dpkg-deb.1:216
 msgid ""
 "This option is used to specify the format of the output B<--show> will "
 "produce. The format is a string that will be output for each package listed."
-msgstr ""
+msgstr "Opcja jest u¿ywana do podania formatu wyj¶cia produkowanego przez B<--show>. "
+"Format jest ³añcuchem znaków, który bêdzie wy¶wietlony dla ka¿dego "
+"listowanego pakietu."
 
 # type: Plain text
 #: dpkg-deb.1:225
-#, fuzzy
 msgid ""
 "The string may reference any status field using the \"${I<field-name>}\" "
 "form, a list of the valid fields can be easily produced using B<-I> on the "
@@ -506,7 +507,9 @@ msgid ""
 msgstr ""
 "Argumentem jest ³añcuch znaków, który mo¿e siê odnosiæ do dowolnego pola "
 "pliku stanu w postaci \"${I<nazwa-pola>}\". Listê nazw poprawnych pól mo¿na "
-"³atwo wygenerowaæ, u¿ywaj±c opcji B<-I> na tym samym pakiecie."
+"³atwo wygenerowaæ, u¿ywaj±c opcji B<-I> na tym samym pakiecie. Pe³ne wyja¶nienie "
+"opcji formatowania (³±cznie z sekwencjami cytowania i rozdzielaniem pól) mo¿na znale¼æ "
+"w opisie opcji B<--showformat> w B<dpkg-query>(1)."
 
 # type: Plain text
 #: dpkg-deb.1:227
@@ -645,3 +648,4 @@ msgstr ""
 "udostêpnione na Ogólnej Licencji Publicznej GNU; BRAK JAKIEJKOLWIEK "
 "GWARANCJI. Szczegó³y zobacz w I</usr/share/doc/dpkg/copyright> oraz I</usr/"
 "share/common-licences/GPL>."
+
