--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-16  Robert Luberda  <robert@debian.org>
+
+	* pl.po: Updated to 848t18f42u.
+
 2006-06-16  Guillem Jover  <guillem@debian.org>
 
 	* LINGUAS: Add ne.
