--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-16  Robert Luberda  <robert@debian.org>
+
+	* dpkg-deb.1/po/pl.po: Update to 78t.
+
 2006-06-11  Peter Karlsson <peterk@debian.org>
 
 	* dselect.1/po/sv.po: Updated translation.
