Fix typo in dpkg-deb manpage (Robert Luberda). Closes: #373999

--- a/man/C/dpkg-deb.1
+++ b/man/C/dpkg-deb.1
@@ -1,4 +1,4 @@
-.TH dpkg\-deb 1 "2006-05-10" "Debian Project" "dpkg suite"
+.TH dpkg\-deb 1 "2006-06-17" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg\-deb - Debian package archive (.deb) manipulation tool
 .SH SYNOPSIS
@@ -209,7 +209,7 @@ copyright licensing and lack of warranty. (The American spelling
 is also supported).
 .SH OTHER OPTIONS
 .TP
-\fB\-\-show\-format=\fP\fIformat\fR
+\fB\-\-showformat=\fP\fIformat\fR
 This option is used to specify the format of the output \fB\-\-show\fP
 will produce. The format is a string that will be output for each package
 listed.
