--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
     differs (like in binNMUs). Closes: #62529
   * Add missing comment serving as documentation about abort-remove on
     removal in dpkg.postinst (Justin Pryzby). Closes: #372145
+  * Fix typo in dpkg-deb manpage (Robert Luberda). Closes: #373999
 
   [ Updated dpkg Translations ]
   * Romanian (Eddy Petrişor).
