--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,9 @@
 2006-06-16  Robert Luberda  <robert@debian.org>
 
+	* C/dpkg-deb.1: Fix typo ("--show-format" -> "--showformat").
+
+2006-06-16  Robert Luberda  <robert@debian.org>
+
 	* dpkg-deb.1/po/pl.po: Update to 78t.
 
 2006-06-11  Peter Karlsson  <peterk@debian.org>
