l10n:RO:  now 938t for dpkg; a couple of typo fixes

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-06-17  Eddy Petrişor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Updated to 938t;
+	A couple typo fixes;
+	Anticipated an update on the help for the alternatives;
+
 2006-06-16  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Updated to 848t18f42u.
