--- a/po/ro.po
+++ b/po/ro.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-02 03:58+0300\n"
-"PO-Revision-Date: 2006-06-16 10:21+0300\n"
+"PO-Revision-Date: 2006-06-17 07:40+0300\n"
 "Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1416,7 +1416,7 @@ msgid ""
 "dpkg: %s: warning - unable to readlink conffile `%s'\n"
 " (= `%s'): %s\n"
 msgstr ""
-"dpkg: %s: avertisment - imposibil a citi legătura la fişierul conffile „%s”\n"
+"dpkg: %s: avertisment - imposibil a executa readlink la fişierul conffile „%s”\n"
 " (= „%s”): %s\n"
 
 #: src/configure.c:380
@@ -4546,8 +4546,8 @@ msgstr ""
 "  --local                  toate veriunile pachetului sunt redirectate.\n"
 "  --divert <loc-de-redir>  numele folosit de versiunile celorlalte pachete.\n"
 "  --rename                 chiar mută fişierul de-o parte (sau înapoi).\n"
-"  --admindir <director>    cconfigurează directorul cu fişierul de redirectări.\n"
-"  --test                   nu face nimi, doar demonstrează.\n"
+"  --admindir <director>    configurează directorul cu fişierul de redirectări.\n"
+"  --test                   nu face nimic, doar demonstrează.\n"
 "  --quiet                  operare silenţioasă, minim de mesaje la ieşire.\n"
 "  --help                   afişează acest ajutor\n"
 "  --version                afişează versiunea\n"
@@ -4951,6 +4951,28 @@ msgid ""
 "  --help                   show this help message.\n"
 "  --version                show the version.\n"
 msgstr ""
+"Utilizare: %s [<opţiuni> ...] [--] [<numefişier>]\n"
+"\n"
+"Opţiuni:\n"
+"  --section <expreg> <titlu>\n"
+"                         pune noua intrare în secţiunea care se potriveşte cu <regex>\n"
+"                         sau creează una nouă cu <titlu> dacă nu există.\n"
+"  --menuentry=<text>     aplică intrarea în meniu.\n"
+"  --description=<text>   aplică descrierea care va fi folosită în intrarea de meniu.\n"
+"  --info-file=<cale>     specifică fişierul info care va fi instalat în director.\n"
+"  --dir-file=<cale>      specifică numele arhivei info.\n"
+"  --infodir=<director>   la fel ca '--dir-file=<director>/dir'.\n"
+"  --info-dir=<director>  identic.\n"
+"  --keep-old             nu se înlocuiesc intrările vechi şi nici nu se şterg\n"
+"                         cele goale.\n"
+"  --remove               şterge intrarea specificată de numele de bază <numefişier>.\n"
+"  --remove-exactly       şterge exact intrarea <numefişier>.\n"
+"  --test                 activează module de test (nu se intreprind acţiuni).\n"
+"  --debug                activează module de depanare (se afişează mai multe"
+"                         informaţii).\n"
+"  --quiet                nu afişează mesaje la ieşire.\n"
+"  --help                 afişează acest ajutor\n"
+"  --version              afişează versiunea\n"
 
 #: scripts/install-info.pl:98
 #, perl-format
@@ -5190,6 +5212,39 @@ msgid ""
 "  --help                   show this help message.\n"
 "  --version                show the version.\n"
 msgstr ""
+"Utilizare: %s [<opţiune> ...] <comanda>\n"
+"\n"
+"Comenzi:\n"
+"  --install <legătură> <nume> <cale> <prioritate>\n"
+"    [--slave <legătură> <nume> <cale>] ...\n"
+"                           adaugă un grup de alternative în sistem.\n"
+"  --remove <nume> <cale>   şterge <cale> din grupul de alternative <nume>.\n"
+"  --remove-all <nume>      şterge grupul <nume> din sistemul de alternative.\n"
+"  --auto <nume>            schimbă legătura primară <nume> pe modul automat.\n"
+"  --display <nume>         afişează informaţii despre grupul <nume>.\n"
+"  --list <nume>            afişează toate ţintele grupului <nume>.\n"
+"  --config <nume>          afişează alternativele pentru grupul <nume> şi\n"
+"                           cere utilzatorului să selecteze pe cel folosit.\n"
+"  --set <nume> <cale>      configurează <cale> ca alternativă pentru <nume>.\n"
+"  --all                    cheamă --config pentru toate alternativele.\n"
+"\n"
+"<legătură> este legătura spre /etc/alternatives/<nume>.\n"
+"  (ex.: /usr/bin/pager)\n"
+"<nume> este numele primar al acestui grup de legături.\n"
+"  (ex.: pager)"
+"<cale> este localizarea uneia din ţintele grupului de alternative.\n"
+"  (ex.: /usr/bin/less)\n"
+"<prioritate> este un intreg; opţiunile cu numere mai mari au prioritatea mai\n"
+"  mare în modul automat.\n"
+"\n"
+"Opţiuni:\n"
+"  --altdir <director>      schimbă directorul de alternative.\n"
+"  --admindir <director>    schimbă directorul de administrare.\n"
+"  --test                   nu face nimic, doar demonstrează.\n"
+"  --verbose                operare „gălăgioasă”, mai multe mesaje la ieşire.\n"
+"  --quiet                  operare silenţioasă, minim de mesaje la ieşire.\n"
+"  --help                   afişează acest ajutor\n"
+"  --version                afişează versiunea\n"
 
 #: scripts/update-alternatives.pl:82 scripts/update-alternatives.pl:83
 #, perl-format
