Fix "alternativse" typo. PO files unfuzzied

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,7 +33,11 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
 
- -- Jacobo Tarrio <jtarrio@debian.org>  Tue,  6 Jun 2006 21:26:46 +0200
+  [ Christian Perrier ]
+  * Typo fix in update-alternatives ("alternativse"). Thanks to Eddy Petrisor
+    for spotting it. Translations unfuzzied
+
+ -- Christian Perrier <bubulle@debian.org>  Sat, 17 Jun 2006 07:22:34 +0200
 
 dpkg (1.13.21) unstable; urgency=low
 
