--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-17  Christian Perrier  <bubulle@debian.org>
+
+	* *.po: Preventive unfuzzy for "alternativse" being corrected
+	in update-alternatives
+
 2006-06-17  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 938t;
