--- a/debian/changelog
+++ b/debian/changelog
@@ -36,8 +36,10 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Typo fix in update-alternatives ("alternativse"). Thanks to Eddy Petrisor
     for spotting it. Translations unfuzzied
+  * Make similar messages in dpkg-statoverride and dpkg-divert exactly similar
+    Thanks to Eddy Petriso for spotting them, again
 
- -- Christian Perrier <bubulle@debian.org>  Sat, 17 Jun 2006 07:22:34 +0200
+ -- Christian Perrier <bubulle@debian.org>  Sat, 17 Jun 2006 07:31:42 +0200
 
 dpkg (1.13.21) unstable; urgency=low
 
