dpkg-source issued spurious warnings about fields defined with XB-. They now get correctly suppressed. Closes: #374154

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-06-17  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-source.pl: Fix typo in regex that caused
+	spurious warnings for user defined fields even though they
+	used the correct XB- syntax.
+
 2006-06-16  Guillem Jover  <guillem@debian.org>
 
 	* scripts/controllib.pl (parsechangelog): Move substvar initialization
