Clarify dpkg-architecture new options '-e' and '-i' in man page, add backward compatibility information and give some examples. Thanks for the initial suggestions to Junichi Uekawa. Closes: #370830

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
   * Add missing comment serving as documentation about abort-remove on
     removal in dpkg.postinst (Justin Pryzby). Closes: #372145
   * Fix typo in dpkg-deb manpage (Robert Luberda). Closes: #373999
+  * Clarify dpkg-architecture new options '-e' and '-i' in man page, add
+    backward compatibility information and give some examples.
+    Thanks for the initial suggestions to Junichi Uekawa. Closes: #370830
   
   [ Frank Lichtenheld ]
   * dpkg-source issued spurious warnings about fields defined with
