--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-17  Guillem Jover  <guillem@debian.org>
+
+	* C/dpkg-architecture.1: Clarify new -e and -i options, give backward
+	compatibility information and add some examples.
+
 2006-06-16  Robert Luberda  <robert@debian.org>
 
 	* C/dpkg-deb.1: Fix typo ("--show-format" -> "--showformat").
